# WanichusilkToolKitCMake

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  debug.sh  debug_commands.txt  run.sh
FloatVarContainer/: CMakeLists.txt
FloatVarContainer/include/: darray.h  define.h  floatvar.h  fvdisk.h  fvheader.h  fvnumber.h
FloatVarContainer/src/: floatvar.cpp  fvdisk.cpp  fvheader.cpp  fvnumber.cpp
TestChamber/: CMakeLists.txt
TestChamber/src/: main.cpp
